manifests/k8s-native.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: native-deploy
spec:
  replicas: 1
  selector:
    matchLabels: { app: native-app }
  template:
    metadata:
      labels: { app: native-app, version: "17" }
    spec:
      containers:
        - name: native
          image: <REGION_CODE>.ocir.io/<NAMESPACE>/ocir_graalvm:native
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: native-svc
spec:
  type: ClusterIP
  selector: { app: native-app }
  ports:
    - name: http
      port: 80
      targetPort: 8080
