manifests/k8s-oracledatabase.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: oracledatabase
spec:
  serviceName: oracledatabase
  replicas: 1
  selector:
    matchLabels:
      app: oracledatabase
  template:
    metadata:
      labels:
        app: oracledatabase
    spec:
      securityContext:
        fsGroup: 54321
        fsGroupChangePolicy: "OnRootMismatch"

      containers:
        - name: oracle
          image: container-registry.oracle.com/database/free:latest
          imagePullPolicy: Always

          securityContext:
            runAsUser: 54321
            runAsGroup: 54321
            allowPrivilegeEscalation: false

          ports:
            - name: oracle
              containerPort: 1521
            - name: oem
              containerPort: 5500

          volumeMounts:
            - name: oracle-data
              mountPath: /opt/oracle/oradata

            - name: oracle-init-sql
              mountPath: /opt/oracle/scripts/startup/01-create-graalvm-user.sql
              subPath: 01-create-graalvm-user.sql
              readOnly: true

      volumes:
        - name: oracle-init-sql
          configMap:
            name: oracle-init-sql

  volumeClaimTemplates:
    - metadata:
        name: oracle-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 30Gi
---
apiVersion: v1
kind: Service
metadata:
  name: oracledatabase
spec:
  type: ClusterIP
  selector:
    app: oracledatabase
  ports:
    - name: oracle
      port: 1521
      targetPort: 1521
    - name: oem
      port: 5500
      targetPort: 5500
